# RanobeLibToFB2

./: .firebaserc  .gitignore  .release-please-manifest.json  .stylelintrc  CHANGELOG.md  README.md  awaiter.js  eslint.config.js  eslint.config.mjs  index.html  index.js  package.json  releace-please-config.json  release-please-config.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release-please.yml  tauri.yaml
original/: index.js
src/: App.css  App.tsx  firebase.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/__tests__/: api.test.ts
src/components/ChapterList/: ChapterList.module.css  ChapterList.module.css.d.ts  ChapterList.tsx  index.ts
src/components/DownloadSettings/: DownloadSettings.tsx  index.ts
src/components/Info/: Info.tsx
src/components/NovelsListItem/: NovelsListItem.tsx  index.ts
src/components/SNovel/: SNovel.tsx
src/components/SNovels/: SNovels.module.css  SNovels.tsx
src/components/Search/: Search.tsx
src/components/SearchBar/: SearchBar.module.css  SearchBar.module.css.d.ts  SearchBar.tsx
src/components/SearchedCard/: SNovel.module.css  SNovel.module.css.d.ts  SearchedCard.tsx  index.ts
src/components/TitleInfo/: TitleInfo.tsx  index.ts
src/hooks/state/: state.ts
src/pages/Search/: Search.tsx
src/pages/Title/: Title.module.css  Title.tsx  (+1 more)
src/tests/: assets.test.tsx  firebase.test.ts  setup.ts  vite-env.test.ts
src/types/: toolTypes.ts
src/utils/: cmpChapters.ts  mimeBicycle.ts  parseChapters.ts  printBook.ts
(+37 files in other folders)
