[package]
name = "fb2creator"
version = "1.0.0"
description = "A Tauri App"
authors = ["SaLapus"]
license = "GNU GPLv3"
repository = "https://github.com/SaLapus/RanobeLibToFB2"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fb2creator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-http = "2.0.0"
